Practica para distribuir las cosas por la pantalla

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
         <h1 class="guion"> - </h1>
         <h1 class="hola">SISTEMAS OPERATIVOS</h1>
         
+        
+
+
 
     </div>
-   
+    <div class="caja">
+        <div class="uno"></div>
+        <div class="dos">mundo</div>
+    </div>
 </body>
 </html>
