creacion de dos div con diferentes propiedades

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
     </div>
     <div class="caja">
-        <div class="uno"></div>
+        <div class="uno">
+            <div class="unouno"></div>
+            <div class="dosdos"></div>
+        </div>
         <div class="dos">mundo</div>
     </div>
 </body>
