imagen agregada de tokyo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <div class="unouno"></div>
             <div class="dosdos"></div>
         </div>
-        <div class="dos">mundo</div>
+        <div class="dos">mundo
+            <img src="images/gojo.jpeg" alt="">
+        </div>
     </div>
 </body>
 </html>
